feat: toMap 函数支持  PropertyFilter